; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_expand_loose_notes_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_expand_loose_notes_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.object_id = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @expand_loose_notes_ref(%struct.strbuf* %0) #0 {
  %2 = alloca %struct.strbuf*, align 8
  %3 = alloca %struct.object_id, align 4
  store %struct.strbuf* %0, %struct.strbuf** %2, align 8
  %4 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %5 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @get_oid(i32 %6, %struct.object_id* %3)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %11 = call i32 @expand_notes_ref(%struct.strbuf* %10)
  br label %12

12:                                               ; preds = %9, %1
  ret void
}

declare dso_local i64 @get_oid(i32, %struct.object_id*) #1

declare dso_local i32 @expand_notes_ref(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
